# algo-project-server-dev

./: .dockerignore  .env  .eslintignore  .eslintrc  .gitignore  DB_UML.mdj  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  package.json  tsconfig.json  webpack-build.config.js
src/: app.controller.ts  app.module.ts  main.ts
src/auth/: auth.controller.ts
src/database/: database.provider.ts
src/mongodb/: mongodb.module.ts
src/schemas/: user.schema.ts
src/test/: test.controller.ts
src/user/domain/: User.ts
typings/: declaration.d.ts
wasm_module/: Cargo.toml
wasm_module/src/: lib.rs
