[package]
name = "wasm_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
wasm-bindgen = "0.2.8"
serde_json = "1.0.68"
serde_derive = "1.0.130"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.js-sys]
version = "0.3.5"